kubernetes/applications/immich/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: immich
  annotations:
    argocd.argoproj.io/sync-wave: "-20"
  labels:
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/audit: baseline
    pod-security.kubernetes.io/audit-version: latest
    pod-security.kubernetes.io/warn: baseline
    pod-security.kubernetes.io/warn-version: latest
