kubernetes/applications/immich/machine-learning-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-machine-learning
  namespace: immich
  annotations:
    argocd.argoproj.io/sync-wave: "5"
spec:
  selector:
    app.kubernetes.io/name: immich-machine-learning
  ports:
    - name: http
      port: 3003
      targetPort: http
