kubernetes/applications/immich/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-server
  namespace: immich
  annotations:
    argocd.argoproj.io/sync-wave: "10"
spec:
  selector:
    app.kubernetes.io/name: immich-server
  ports:
    - name: http
      port: 2283
      targetPort: http
