kubernetes/applications/immich/valkey-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-valkey
  namespace: immich
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  selector:
    app.kubernetes.io/name: immich-valkey
  ports:
    - name: valkey
      port: 6379
      targetPort: valkey
